--- a/src/components/NavBar/Navbar.css
+++ b/src/components/NavBar/Navbar.css
@@ -45,7 +45,7 @@
     border: none;
     background-color: #326F5E;
     color: white;
-    width: 100px;
+    width: 100%;
     height: 35px;
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
     transition: all ease 0.5s;
